@@ -1,5 +1,7 @@
 Changes for Perl extension Padre-Plugin-Swarm
 0.06 
+	- add feature Open in Other Editor
+	- attempt to select a usable multicast interface
 0.05 - Sun Dec 13 19:51:51 EST 2009
 	- add 'Run in other editor' feature 
 	- chat text restyled
